--- a/skin-sense-webapp/index.html
+++ b/skin-sense-webapp/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-<title>Skin-Sense</title>
+<title>CMPE-258</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Identifying Skin Leison through neural nets">
 
@@ -24,7 +24,6 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 
-<link rel="shortcut icon" type="image/png" href="assets/logo.png">
 
 
 <style>
@@ -33,9 +32,9 @@ html,body,h2,h3,h4,p,h5,li {font-family: Roboto, sans-serif}
  <script src="//cdn.muut.com/1/moot.min.js"></script>
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.24.min.js"></script><script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script><script type="text/javascript">
-var bucketName = 'skin-sense-images';
-var bucketRegion = 'ap-south-1';
-var IdentityPoolId = 'ap-south-1:600498b7-389b-4163-b002-dd8a81552af6';
+var bucketName = 'cmpe-258-project';
+var bucketRegion = 'us-east-1';
+var IdentityPoolId = 'us-east-1:600498b7-389b-4163-b002-dd8a81552af6';
 
 
  AWS.config.update({
@@ -70,7 +69,7 @@ var IdentityPoolId = 'ap-south-1:600498b7-389b-4163-b002-dd8a81552af6';
 
 <!-- w3-content defines a container for fixed size centered content,
 and is wrapped around the whole page content. -->
-<div class="w3-content" style="max-width:960px ; max-height:50%;">
+<div class="w3-content" style="width: 100%; height: 100vh;">
 
 
 
@@ -84,22 +83,18 @@ and is wrapped around the whole page content. -->
 
 	
 <!-- Top Bar -->
-<div class='w3-center'>
-	 <img src="assets/logo.png" alt = "SKIN-SENSE" align="center" style="display:block;margin:auto;"> </img>
-	
-</div>
 
 
 
-
+<h1 style="text-align:center;">Classification of dermoscopic images using CNNs</h1>
 
 <!-- Front page image -->
 <!-- This image will be replaced once the js code runs. -->
 <div class="w3-center w3-padding-bottom">
 	
-        
+	
 
-	<img id="selected-image" class="w3-round adjust-image" src="assets/alt_icon.jpg" height="250" alt="Image for analysis"> 
+	<img id="selected-image" class="w3-round adjust-image" src="https://cmpe-258-final-project.s3.amazonaws.com/assets/alt_icon.jpg" height="240" alt="Image for analysis"> 
 	
 </div> 
 
@@ -113,20 +108,6 @@ and is wrapped around the whole page content. -->
 		<b>Click here to upload images</b></button>
 	<!--<p class="w3-text-teal">jpeg or png</p>-->
           <br>
-   
-
-  <a  id = 'upload-btn' class="w3-btn w3-deep-orange w3-hover-blue w3-round w3-margin-bottom adjust-spacing btn-font w3-padding w3-space-letters w3-text-white" href="google_map.html" ><i class='fas fa-map-marker-alt' style='font-size:15px'></i>
-		<b>Find a Doctor</b></a>
-
-
- <a  id = 'upload-btn' class="w3-btn w3-deep-orange w3-hover-blue w3-round w3-margin-bottom adjust-spacing btn-font w3-padding w3-space-letters w3-text-white" href="https://muut.com/i/skinsense-forum" ><i class='fas fa-comment-dots' style='font-size:15px'></i>
-		<b>Discussion Forum</b></a>
-	
-
-
-	
-
-
 </div> 
 
 
@@ -184,8 +165,7 @@ text-color space-letters bottom-margin dont-break-out">
 
 <!-- Bottom Bar -->
 <div class='w3-center'>
-<p class="space-letters-large w3-small w3-tag bground-color w3-text-teal w3-border w3-round">
-		<a class="change-size" href="faq.html" style="color:white;"><b>How to USE</b></a>
+
 
 
 
@@ -194,11 +174,7 @@ text-color space-letters bottom-margin dont-break-out">
 
 
 <div class='w3-center w3-padding-bottom'>
-	<p class="space-letters">
-		<p class="w3-small w3-hover-text-deep-orange text-color" href="">
-		<b>HACK_X</b></p>
-	</p>
-
+	
 
 </div>
 
@@ -246,8 +222,8 @@ text-color space-letters bottom-margin dont-break-out">
 	<script type="text/javascript">
 	function s3upload() {   var files = document.getElementById('image-selector').files;   if (files) 
    {
-   	 var bucketName ='skin-sense-images';
-   	 var bucketRegion = 'ap-south-1';
+   	 var bucketName ='cmpe-258-project';
+   	 var bucketRegion = 'us-east-1';
      var file = files[0];
      var fileName = file.name;
      var filePath = fileName;
